Remove GDPR advice

--- a/PRINCIPLES.mdx
+++ b/PRINCIPLES.mdx
@@ -34,7 +34,8 @@ So you should design your assistant in such a way that it does not amplify bad b
 the assistant should politely refuse to participate. Remeber that somebody has to read many of these conversations during the CDD process, and you
 should care for that person's mental health as well.
 
-Another aspect of this is to respect the user's privacy. For example, it is a good idea to make your assistant [GDPR](https://gdpr-info.eu/) compliant.
+Another aspect of this is to respect the user's privacy. For example, you're setup should follow local privacy laws but also take more stringent measures to 
+protect user privacy and safety as necessary.
 
 
 ## Identify as a bot: A conversational assistant should always identify itself as one
