--- a/docs/docs/generating-nlu-data.mdx
+++ b/docs/docs/generating-nlu-data.mdx
@@ -54,18 +54,36 @@ much more effectively in real-world scenarios.
 
 ### Data Augmentation
 
-Once you have obtained a first set of real user data, you can use data augmentation to
-generate more "realistic" data from that first set of real data. Data augmentation is
-different from static templates as it is able to introduce syntactic (e.g. word order)
-and semantic (e.g. word choice) variation in your training data and thereby help the
-model to generalise more effectively with only little amounts of real user data. It
-needs to be noted though, that data augmentation can also introduce noise and therefore
-requires a substantial amount of care and inspection before it is applied.
+:::caution
+Data augmentation is not a replacement for messages from actual users.
 
-However, it is important to note that data augmentation is not a replacement for real
-user data. It is intended as a way to rapidly bootstrap an NLU model in order for you to
-share your assistant with real users more quickly - and therefore enable you to collect
-conversations with real users more quickly.
+Always prefer data from real users over automatically generated ones.
+
+Automatically generated data can be noisy, we recommend to always
+manually check any generated paraphrases.
+:::
+
+Most importantly, data augmentation is not a replacement for real user data.
+It is intended as a way to rapidly generate additional training examples
+in order to help you to create a new intent despite not yet having enough
+real data. Once you have collected enough real data, we recommend you remove
+the generated data.
+
+##### Recommended Use
+
+1. You identify a new intent while reviewing conversations in your NLU inbox.
+2. You want to add this intent to your bot, but you don't have enough real user
+messages yet.
+3. You generate a small amount of paraphrases for the existing real user messages
+with the paraphraser from [https://github.com/RasaHQ/paraphraser](https://github.com/RasaHQ/paraphraser).
+4. You use the data augmentation CLI tool (`rasa data augment nlu`) to evaluate
+the performance impact of adding the generated data to your model.
+5. Once you are happy with the results, you store the additional generated data
+in a spearate file, e.g. `synthetic.yml`.
+6. As more and more users express this intent, you collect more real user messages
+for it.
+7. You delete `synthetic.yml`.
+
 
 ### Share with Test Users Early
 
