--- a/changelog/7286.bugfix.md
+++ b/changelog/7286.bugfix.md
@@ -1,1 +1,2 @@
-Best model checkpoint allows for metrics to stay the same if at least one metric improves.
+Best model checkpoint allows for metrics to be equal to previous best if at least one 
+metric improves, rather than strict improvement for each metric.
