Added import to the example code

--- a/docs/docs/fallback-handoff.mdx
+++ b/docs/docs/fallback-handoff.mdx
@@ -187,6 +187,8 @@ The following snippet is an implementation of a custom action which does the sam
 ```python title="actions.py"
 from typing import Any, Text, Dict, List
 
+from rasa.shared.core.constants import ACTION_DEFAULT_FALLBACK_NAME
+
 from rasa_sdk import Action, Tracker
 from rasa_sdk.events import UserUtteranceReverted
 from rasa_sdk.executor import CollectingDispatcher
