Added the same import to the second example

--- a/docs/docs/fallback-handoff.mdx
+++ b/docs/docs/fallback-handoff.mdx
@@ -303,13 +303,15 @@ For example, if you want the bot to call a human and stop interacting with the u
 ```python title="actions.py"
 from typing import Any, Dict, List, Text
 
+from rasa.shared.core.constants import ACTION_DEFAULT_FALLBACK_NAME
+
 from rasa_sdk import Action, Tracker
 from rasa_sdk.events import UserUtteranceReverted
 from rasa_sdk.executor import CollectingDispatcher
 
 class ActionDefaultFallback(Action):
     def name(self) -> Text:
-        return "action_default_fallback"
+        return ACTION_DEFAULT_FALLBACK_NAME
 
     def run(
         self,
