--- a/docs/docs/command-line-interface.mdx
+++ b/docs/docs/command-line-interface.mdx
@@ -419,6 +419,12 @@ domain files:
 
 ## rasa data augment nlu
 
+:::caution
+
+This is an experimental feature.
+:::
+
+
 You can perform data augmentation by first [generating paraphrases](https://github.com/RasaHQ/paraphraser) and subsequently running the following command in order to get data suggestions that can be added to the training data:
 
 ```bash
