--- a/changelog/8454.improvement.md
+++ b/changelog/8454.improvement.md
@@ -1,1 +1,3 @@
-Reformulate our margin loss as triplet loss.
+Reformulate the existing margin loss as [triplet loss](https://arxiv.org/abs/1503.03832).
+
+Using `loss_type=margin` in `DIETClassifier`, `ResponseSelector`, `TEDPolicy` will result in a warning as margin loss will be deprecated in Rasa Open Source 3.0. If you were using `loss_type=margin` earlier, please update your configuration to use `loss_type=triplet`. For example -
