auto config similarity for triplet loss

--- a/docs/docs/policies.mdx
+++ b/docs/docs/policies.mdx
@@ -282,8 +282,8 @@ However, additional parameters exist that can be adapted.
 | similarity_type                       | "auto"                 | Type of similarity measure to use, either 'auto' or 'cosine' |
 |                                       |                        | or 'inner'.                                                  |
 +---------------------------------------+------------------------+--------------------------------------------------------------+
-| loss_type                             | "cross_entropy"        | The type of the loss function, either 'cross_entropy'        |
-|                                       |                        | or 'triplet'.                                                |
+| loss_type                             | "cross_entropy"        | The type of the loss function, either 'cross_entropy',       |
+|                                       |                        | 'margin' or 'triplet'.                                       |
 +---------------------------------------+------------------------+--------------------------------------------------------------+
 | ranking_length                        | 10                     | Number of top actions to normalize scores for. Applicable    |
 |                                       |                        | only with loss type 'cross_entropy' and 'softmax'            |
@@ -296,10 +296,17 @@ However, additional parameters exist that can be adapted.
 | maximum_negative_similarity           | -0.2                   | Maximum negative similarity for incorrect labels.            |
 |                                       |                        | Should be -1.0 < ... < 1.0 for 'cosine' similarity type.     |
 +---------------------------------------+------------------------+--------------------------------------------------------------+
+| use_maximum_negative_similarity       | True                   | If 'True' the algorithm only minimizes maximum similarity    |
+|                                       |                        | over incorrect intent labels, used only if 'loss_type' is    |
+|                                       |                        | set to 'margin'.                                             |
++---------------------------------------+------------------------+--------------------------------------------------------------+
 | scale_loss                            | True                   | Scale loss inverse proportionally to confidence of correct   |
 |                                       |                        | prediction.                                                  |
 +---------------------------------------+------------------------+--------------------------------------------------------------+
 | regularization_constant               | 0.001                  | The scale of regularization.                                 |
++---------------------------------------+------------------------+--------------------------------------------------------------+
+| negative_margin_scale                 | 0.8                    | The scale of how important it is to minimize the maximum     |
+|                                       |                        | similarity between embeddings of different labels.           |
 +---------------------------------------+------------------------+--------------------------------------------------------------+
 | drop_rate_dialogue                    | 0.1                    | Dropout rate for embedding layers of dialogue features.      |
 |                                       |                        | Value should be between 0 and 1.                             |
