fixes skipped heading level

--- a/docs/docs/generating-nlu-data.mdx
+++ b/docs/docs/generating-nlu-data.mdx
@@ -69,7 +69,7 @@ in order to help you to create a new intent despite not yet having enough
 real data. Once you have collected enough real data, we recommend you remove
 the generated data.
 
-##### Recommended Use
+#### Recommended Use
 
 1. You identify a new intent while reviewing conversations in your NLU inbox.
 2. You want to add this intent to your bot, but you don't have enough real user
