Fix heading depth

--- a/docs/docs/migration-guide.mdx
+++ b/docs/docs/migration-guide.mdx
@@ -14,7 +14,7 @@ how you can migrate from one version to another.
 
 ### Machine Learning Components
 
-### `DIET`, `TED`, and `ResponseSelector`
+#### `DIET`, `TED`, and `ResponseSelector`
 
 The former `weight_sparsity` parameter of the `DIETClassifier`, `TEDPolicy`, and the `ResponseSelector`, 
 is now deprecated and superseded by the new `connection_density` parameter.
